--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,119 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+  background-color: #f6f6f6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0px;
+}
+/* ??? ?? ?? ?? */
+@media (min-width: 650px){ /*if size> 650 do*/
+  .App{
+    width:640px;
   }
 }
 
-.App-header {
+@media (min-width: 1500px){ /*if size> 650 do*/
+  .App{
+    width:1480px;
+  }
+}
+
+@media (max-width:650px){
+  .App{
+    width:90vw;
+  }
+}
+
+#root {
+  background-color: white;
+  box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
+}
+
+
+.App {
+  min-height: 100vh;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  font-family: 'Do Hyeon', sans-serif;
+}
+
+
+/* My Button */
+.MyButton{
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  font-size: 25px;
+  white-space: nowrap;
+  font-family: 'Do Hyeon', sans-serif;
+}
+
+.MyButton_default{
+  background-color: #ececec;
+  color: black;
+}
+
+.MyButton_positive {
+  background-color: #64c964;
+  color: white;
+}
+.MyButton_negative {
+  background-color: #fd565f;
+  color: white;
+}
+
+/* header */
+header{
+  /* padding-top: 20px; */
+  /* padding-bottom: 20px; */
+
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e2e2e2;
+  background-color: #64c964;
+}
+header > div {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  display: flex;
+  width: 50%;
+  font-size: 25px;
+  cursor: pointer;
+  justify-content: center;
+
+}
+
+header .head_login{
+  justify-content: center;
+  background-color: darkcyan;
+}
+header .head_signup{
+  /* width: 25%; */
+  justify-content: center;
+  background-color: darkcyan;
+}
+.group_header{
+  background-color: darkgray;
+  justify-content: center;
+  color: white;
+  
+}
+
+
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,7 +122,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
