--- a/src/App.css
+++ b/src/App.css
@@ -192,7 +192,7 @@ header .head_signup{
   width: 20%;
 
 }
-.MyGroupList, .RecommendGroupList{
+.MyGroupList, .RecommendGroupList, .MyLectureList, .RecommendLectureList{
   display:flex;
   flex-wrap: wrap;
   /* overflow:; */
@@ -202,7 +202,7 @@ header .head_signup{
   
 }
 
-.MyGroup, .RecommendGroup {
+.MyGroup, .RecommendGroup, .MyLecture, .RecommendLecture {
   width: 250px;
   border: 4px solid #e2e2e2;
   border-radius: 5px;
@@ -214,7 +214,7 @@ header .head_signup{
   cursor: pointer;
 }
 
-.RecommendGroup .RecommendGroup_image, .MyGroup .MyGroup_image{
+.RecommendGroup .RecommendGroup_image, .MyGroup .MyGroup_image, .RecommendLecture .RecommendLecture_image, .MyLecture .MyLecture_image{
   width: 100%;
   /* height: 40px; */
   border-bottom: 5px solid #ececec;
@@ -224,28 +224,28 @@ header .head_signup{
   background-color: #64c964;
 }
 
-.group_title{
+.group_title, .lecture_title{
   padding: 10px;
   font-size: 30px;
 }
-.RecommendGroup .RecommendGroupcontent, .MyGroup .MyGroupcontent {
+.RecommendGroup .RecommendGroupcontent, .MyGroup .MyGroupcontent, .RecommendLecture .RecommendLecturecontent, .MyLecture .MyLecturecontent {
   font-size: 20px;
   justify-content: center; 
 
 }
 
-.RecommendGroup .RecommendGroupcontent p, .MyGroup .MyGroupcontent p{
+.RecommendGroup .RecommendGroupcontent p, .MyGroup .MyGroupcontent p, .RecommendLecture .RecommendLecturecontent p, .MyLecture .MyLecturecontent p{
   word-wrap: break-word;
 }
 
 
-.group_search {
+.group_search, .lecture_search {
   padding: 5px;
   margin: 20px;
   margin-top: 50px;
 
 }
-.group_searchBar{
+.group_searchBar, .lecture_searchBar{
   width: 40%;
   font-size: 30px;
   margin-right: 40px;
@@ -288,6 +288,58 @@ header .head_signup{
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.slogen {
+  padding: 10px;
+  margin:20px;
+  font-size: 40px;
+}
+
+.hobby {
+  font-size: 25px;
+  margin-left: 40px;
+  border: 4px solid #ececec;
+  border-radius: 5px;
+  padding-left: 40px;
+  
+}
+.hobby .hobby_p{
+  display: flex;
+  color: #fd565f;
+  
+}
+.hobby .my_hobby, .hobby .recommended_hobby{
+  font-size: 20px;
+  display: flex;
+}
+.group_main{
+  justify-content: center;
+  font-size: 20px;
+  
+}
+
+.group_content{
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+  margin-bottom: 10px;
+  padding:40px;
+  height:250px;
+
+}
+.group_content .group_thumbnail{
+  width: 300px;
+  background-color: beige;
+}
+.group_content .MyButton{
+margin-left:20px;
+margin-top: 60px;
+height: 50px;
+}
+.group_detail{
+  padding-right:280px;
+  justify-content: center;
 }
 
 
