--- a/src/App.css
+++ b/src/App.css
@@ -322,6 +322,17 @@ header .head_signup{
   font-size: 20px;
   display: flex;
 }
+
+
+.group_list_new{
+  margin: 30px;
+}
+.group_list_new button {
+  height: 280px;
+  width: 250px;
+}
+
+
 .group_main{
   justify-content: center;
   font-size: 20px;
