--- a/src/App.css
+++ b/src/App.css
@@ -540,6 +540,28 @@ height: 50px;
   border-radius: 5px; 
   align-self: center;
 }
+
+
+.Survey{
+  margin-top: 120px;
+  font-size: 30px;
+  border: 2px solid #ececec;
+  border-radius: 5px;
+  box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
+  width: 50%;
+  padding-top: 50px;
+  height: 2300px;
+  align-self: center;
+
+}
+
+.Survey input {
+ 
+  font-size: 30px;
+  border: 2px solid #ececec;
+  border-radius: 5px; 
+  align-self: center;
+}
 /* .App-header {
   background-color: #282c34;
   min-height: 100vh;
