--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
 
+a:link { color: black; text-decoration: none;}
+a:visited { color: black; text-decoration: none;}
+a:hover { color: black; text-decoration:  none;}
 
 body {
   background-color: #f6f6f6;
@@ -260,7 +263,7 @@ header .head_signup{
   /* border-radius:5px; */
   /* display: flex; */
   justify-content: center;
-  background-color: black;
+  background-color: white;
   
 }
 
@@ -457,13 +460,13 @@ height: 50px;
   margin-top: 20px;
   margin-bottom: 10px;
   padding:40px;
-  height:600px;
+  /* height:600px; */
 
 }
 .lecture_header .lecture_thumbnail{
   width: 800px;
-  height: 500px;
-  background-color: beige;
+  /* height: 500px; */
+  /* background-color: beige; */
   width:inherit;
 }
 .lecture_header .MyButton{
@@ -620,4 +623,22 @@ height: 50px;
   to {
     transform: rotate(360deg);
   }
+}
+
+.group_head_chatting a:link{
+  color: white; text-decoration: none
+}
+.group_head_chatting a:visited{
+ color: white; text-decoration: none
+}
+.group_head_chatting a:hover{
+  color: white; text-decoration: none
+}
+
+.moine_logo img{
+  height: 10%;
+  /* width: 10%; */
+  margin-top: 70px;
+  margin-right: 40px;
+  float: right;
 }
