FEAT: 헤더 반응형

--- a/src/App.css
+++ b/src/App.css
@@ -642,3 +642,27 @@ height: 50px;
   margin-right: 40px;
   float: right;
 }
+
+
+
+/* mobile view - header font size */
+@media (min-width: 800px){ /*if size> 650 do*/
+  header > div{
+    font-size: 25px;
+    
+  }
+
+}
+
+@media (min-width: 1400px){ /*if size> 650 do*/
+  header > div{
+    font-size: 25px;
+  }
+
+}
+
+@media (max-width:650px){
+  header > div{
+    font-size: 19px;
+  }
+}
