--- a/src/App.css
+++ b/src/App.css
@@ -75,9 +75,20 @@ body {
 }
 
 .user_default{
-  width:50%;
+  width:100%;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
+  gap: 3rem;
+
+  /* display:grid; */
+  /* grid-template-columns: repeat(auto-fit, minmax(50%, auto)); */
+  /* grid-auto-flow:column; */
+  /* overflow: auto; */
+  /* white-space: normal; */
+  justify-content: center;
+  /* align-items: center; */
+  /* justify-items: center; */
 
 }
 
