--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@ body {
   border: 4px solid #ececec;
   box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
   margin: 40px;
+
 }
 
 
@@ -534,6 +535,7 @@ height: 50px;
 }
 
 .LogIn {
+  margin: 0 auto;
   margin-top: 120px;
   font-size: 30px;
   border: 2px solid #ececec;
@@ -554,6 +556,7 @@ height: 50px;
 }
 
 .SignUp {
+  margin: 0 auto;
   margin-top: 120px;
   font-size: 30px;
   border: 2px solid #ececec;
