FEAT: 마이페이지 유저이미지 중앙 배열

--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,13 @@ body {
 
 }
 
+.user_image{
+  display:grid;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+}
+
 
 /* My Button */
 .MyButton{
