FEAT: 강의 디테일 강의목차 중앙 배열

--- a/src/App.css
+++ b/src/App.css
@@ -521,6 +521,12 @@ height: 50px;
 .lecture_content .lecture_title{
   font-size: 25px;
 }
+.boardType1{
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
 @import "~react-image-gallery/styles/css/image-gallery.css";
 
 .gallery_new{
