--- a/src/App.css
+++ b/src/App.css
@@ -610,7 +610,8 @@ height: 50px;
   box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
   width: 80%;
   padding-top: 50px;
-  height: 1000px;
+  padding-bottom: 50px;
+  height: 300vh;
   align-self: center;
 }
 
