--- a/src/App.css
+++ b/src/App.css
@@ -451,7 +451,9 @@ margin-top: 60px;
 height: 50px;
 }
 .group_detail{
-  padding-right:280px;
+  display: flex;
+  flex-direction: column;
+  /* padding-right:280px; */
   justify-content: center;
 }
 
